--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.0",
+    "sort-by": "^1.2.0",
     "styled-components": "^5.3.8"
   },
   "devDependencies": {
