--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "eslint": "^8.40.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "react-error-overlay": "^6.0.9",
     "vite": "^4.1.0"
   }
 }
